--- a/LSIS1/src/main/java/webroot/CompetitionSubscribe.html
+++ b/LSIS1/src/main/java/webroot/CompetitionSubscribe.html
@@ -16,8 +16,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <div>
             <div class='blog'>
                 <div class='header'>
-                    <h5>Informações</h5>
-                    <h6>Tudo num só lugar!</h6>
+                    <h5>Inscrição</h5>
+                    <h6>Lista das competições / Formulário de inscrição</h6>
                 </div>      
                 <div class='row'>
                     <div class='column1'>
