--- a/LSIS1/src/main/java/webroot/Team.html
+++ b/LSIS1/src/main/java/webroot/Team.html
@@ -18,6 +18,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 <div class="sky"> 
                     <a class="button button--pan" style="color:black" id="button" href="CompetitionSubscribe.html"><div>Inscrição em Competição</div></a>
                     <a class="button button--pan" style="color:black" id="button" href="TeamInfo.html"><div>Informação Equipa   </div></a>
+                    <a class="button button--pan" style="color:black" id="button" href="registerRobot.html"><div>Registo de robô   </div></a>
                     <a class="button button--pan" style="color:black" id="button" href="RobotManagment.html"><div>Gestão dos Robôs</div></a>
                     <a class="button button--pan" style="color:black" id="button" href="Classification.html"><div>Consultar Classificações</div></a>
                     <div class="track"></div>
