--- a/LSIS1/src/main/java/webroot/TeamInfo.html
+++ b/LSIS1/src/main/java/webroot/TeamInfo.html
@@ -16,13 +16,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <div>
             <div class='blog'>
                 <div class='header'>
-                    <h5>Página Informação Equipa</h5>
-                    <h6>Toda a informação que possas imaginar de todas as equipas!</h6>
+                    <h5>Informação</h5>
+                    <h6>Toda a informação que possas imaginar da tua equipa!</h6>
                 </div>      
                 <div class='row'>
                     <div class='column1'>
-                        <button onclick="botaoTeamInfo();">Informação Equipa</button>
                         <input type="text" id="inputTeamId" placeholder="ID Equipa"/>
+                        <button onclick="botaoTeamInfo();">Informação Equipa</button>                       
                         <p></p>
                     </div>
                     <div class='column2'>
