--- a/LSIS1/src/main/java/webroot/Classification.html
+++ b/LSIS1/src/main/java/webroot/Classification.html
@@ -16,36 +16,37 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <div class='blog'>
                 <div class='header'>
                     <h5>Classificações</h5>
-                    <h6>Descobre as classificações do teu robot em qualquer prova!</h6>
+                    <h6>Descobre as classificações do teu robô em qualquer prova!</h6>
                 </div>      
                 <div class='row'>
                     <div class='column1'>
                         <button onclick="botaoCompetitionList();">Listar Competições</button>
                         <p></p>
-                        <button onclick='botaoRoundSearch();'>Procurar Ronda</button>
-                        <input type="text" id="inputIdCompeticao" placeholder="Competition ID"/>
                         <p></p>
-                        <button onclick="botaoRoundInfo();">Informação de uma Ronda</button>
-                        <input type="text" id="inputIdRound" placeholder="Robot ID"/>
+                        <input type="text" id="inputIdCompeticao" placeholder="ID Competição"/>
+                        <button onclick='botaoRoundSearch();'>Procurar Ronda</button>
+                        <p></p>
+                        <input type="text" id="inputIdRound" placeholder="ID Robô"/>
+                        <button onclick="botaoRoundInfo();">Informação de uma Ronda</button>                  
                         <p></p>
                     </div>
                     <div class='column2'>                
                         <h2 id="h2CompetitionList" style="display:none">Lista das Competições</h2> 
                         <p id="pCompetitionList" style="display:none">Todas as competições disponíveis</p>           
                         <table id ="tCompetitionList" style="display:none">
-                            <theader id="tHeaderId" style="display:none" ><tr><th>Id Competicao</th><th>Nome Competicao</th><th>Data Criacao</th></tr></theader>
+                            <theader id="tHeaderId" style="display:none" ><tr><th>Id Competição</th><th>Nome Competição</th><th>Data Criação</th></tr></theader>
                             <tbody id="listaCompeticoes">  </tbody> 
                         </table>
                         <h2 id="h2CompetitionRoundList" style="display: none">Lista de Rondas de uma Competição</h2>
                         <p id="pCompetitionRoundList" style="display:none">Todas as rondas da competição selecionada</p>
                         <table id ="tCompetitionRoundList" style="display:none">
-                            <theader id="tHeaderRondasId" style="display:none" ><tr><th>Id Ronda</th><th>Id Competicao</th><th>Tipo de Ronda</th></tr></theader>
+                            <theader id="tHeaderRondasId" style="display:none" ><tr><th>Id Ronda</th><th>Id Competição</th><th>Tipo de Ronda</th></tr></theader>
                             <tbody id="listaRondas">  </tbody> 
                         </table>
                         <h2 id="h2RoundResults" style="display: none">Classificação</h2>
                         <p id="pRoundResults" style="display:none">A tabela de classifição da ronda!</p>
                         <table id="tRoundResults" style="display: none">
-                            <theader id="tHeaderResultadosRondaId" style="display:none" ><tr><th>Id Robot/Ronda </th><th>Id Robot</th><th>Id Ronda</th><th>Tempo</th><th>Velocidade</th><th>Pontos</th></tr></theader>
+                            <theader id="tHeaderResultadosRondaId" style="display:none" ><tr><th>Id Robô/Ronda </th><th>Id Robô</th><th>Id Ronda</th><th>Tempo</th><th>Velocidade</th><th>Pontos</th></tr></theader>
                             <tbody id="listaResultadosRonda">  </tbody> 
                         </table>
                     </div>
