--- a/LSIS1/src/main/java/webroot/Juri.html
+++ b/LSIS1/src/main/java/webroot/Juri.html
@@ -18,6 +18,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 <div class="sky"> 
                     <a class="button button--pan" style="color:black" id="button" href="RegisterCompetition.html"><div>Registar Competição</div></a>
                     <a class="button button--pan" style="color:black" id="button" href="RegisterRound.html"><div>Registar Ronda</div></a>
+                    <a class="button button--pan" style="color:black" id="button" href="CompetitionManagment.html"><div>Gestão de Competições</div></a>
                     <a class="button button--pan" style="color:black" id="button" href="Search.html"><div>Procurar Equipa/Robot</div></a>
                     <a class="button button--pan" style="color:black" id="button" href="Results.html"><div>Results</div></a>
                     <div class="track"></div>
