--- a/LSIS1/src/main/java/webroot/index.html
+++ b/LSIS1/src/main/java/webroot/index.html
@@ -14,8 +14,8 @@
     <body> 
         <div class="container"> 
             <div class="sky"> 
-                <a class="button button--pan" style="color:black" id="button" href="Juri.html"><div>Júri</div></a>
-                <a class="button button--pan" style="color:black" id="button" href="Team.html"><div>Equipa</div></a>
+                <a class="button button--pan" style="color:black" id="button" href="Login.html?type=1"><div>Júri</div></a>
+                <a class="button button--pan" style="color:black" id="button" href="Login.html?type=2"><div>Equipa</div></a>
                 <div class="track"></div>
                 <div class="car">
                     <div class="wheel wheel1">
